src/main/default/objects/BP_Score__c/BP_Score__c.object-meta.xml
<CustomObject>
    <label>Score</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>