src/main/default/objects/BP_Score__c/fields/BP_GamePlay__c.field-meta.xml
<CustomField>
    <fullName>BP_GamePlay__c</fullName>
    <label>Game Play</label>
    <referenceTo>BP_Gameplay__c</referenceTo>
    <relationshipLabel>Scores</relationshipLabel>
    <relationshipName>Scores</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>