src/main/default/objects/BP_Score__c/fields/BP_Player__c.field-meta.xml
<CustomField>
    <fullName>BP_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scores</relationshipName>
    <type>Lookup</type>
</CustomField>