src/main/default/objects/BP_Score__c/fields/BP_Value__c.field-meta.xml
<CustomField>
    <fullName>BP_Value__c</fullName>
    <label>Value</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>